@@ -33,6 +33,9 @@
 /* needed for EASY_CHAR */
 #include "common_macros.h"
 
+/* needed for rgxg_plain_number_base10 */
+#include "internal_utils.h"
+
 /* needed for NULL, strtol */
 #include <stdlib.h>
 
@@ -78,7 +81,7 @@ int rgxg_net_cidr_ipv4 (const ipv4_t *address, int prefix, char *regex,
             if (x > 1) {
                 EASY_CHAR(')');
                 EASY_CHAR('{');
-                n += rgxg_number(x, 10, (regex ? regex+n : NULL), 0);
+                n += rgxg_plain_number_base10(x, (regex ? regex+n : NULL));
                 EASY_CHAR('}');
                 x = 1;
             }
@@ -170,7 +173,7 @@ int rgxg_net_cidr_ipv6 (const ipv6_t *address, int prefix, char *regex,
                             EASY_CHAR('1');
                             EASY_CHAR(',');
                         }
-                        n += rgxg_number(max, 10, (regex ? regex+n : NULL), 0);
+                        n += rgxg_plain_number_base10(max, (regex ? regex+n : NULL));
                         EASY_CHAR('}');
                         max = 1;
                     }
@@ -205,7 +208,6 @@ int rgxg_net_cidr_ipv6 (const ipv6_t *address, int prefix, char *regex,
                 } else { /* done */
                     j = 14;
                 }
-
             }
         }
         return n;
